--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=EQZWEZIZ#abLyQn1CPlkYA4ypMw5ygm-vGLRRy3u_tuqXiXleWDA",
       "required": true
     }
 },
